// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Angular Cypress Component Test Generator should generate a component test 1`] = `
"import { MountConfig, mount } from 'cypress/angular';
import { MyLibComponent } from './my-lib.component';

describe(MyLibComponent.name, () => {
  const config: MountConfig<MyLibComponent> = {
    declarations: [],
    imports: [],
    providers: []
  }

  it('renders', () => {
     mount(MyLibComponent, {
           ...config,
           componentProperties: {
               type:  'button',
               style:  'default',
               age:  0,
               isOn:  false,
          }
       });
  })
})
"
`;

exports[`Angular Cypress Component Test Generator should handle component w/o inputs 1`] = `
"import { MountConfig, mount } from 'cypress/angular';
import { MyLibComponent } from './my-lib.component';

describe(MyLibComponent.name, () => {
  const config: MountConfig<MyLibComponent> = {
    declarations: [],
    imports: [],
    providers: []
  }

  it('renders', () => {
     mount(MyLibComponent, config);
  })
})
"
`;

exports[`Angular Cypress Component Test Generator should work with standalone components 1`] = `
"import { MountConfig, mount } from 'cypress/angular';
import { MyLibComponent } from './my-lib.component';

describe(MyLibComponent.name, () => {
  const config: MountConfig<MyLibComponent> = {
    declarations: [],
    imports: [],
    providers: []
  }

  it('renders', () => {
     mount(MyLibComponent, {
           ...config,
           componentProperties: {
               type:  'button',
               style:  'default',
               age:  0,
               isOn:  false,
          }
       });
  })
})
"
`;
